--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,50 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.alexdumitriu2001.mavenartifacts</id>
-    <name>IntelliJ Platform Plugin MavenArtifacts</name>
-    <vendor>alexdumitriu2001</vendor>
 
-    <depends>com.intellij.modules.platform</depends>
+<!-- Unique id for this plugin. Must stay constant for the life of the plugin. -->
+<id>com.github.alexdumitriu2001.mavenartifacts</id>
 
-    <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.alexdumitriu2001.mavenartifacts.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.alexdumitriu2001.mavenartifacts.services.MyProjectService"/>
-    </extensions>
+<!-- Text to display as name on Preferences/Settings | Plugin page -->
+<name>Warn Url.#hashCode()</name>
 
-    <applicationListeners>
-        <listener class="com.github.alexdumitriu2001.mavenartifacts.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
+<!-- Product and plugin compatibility requirements -->
+<depends>com.intellij.modules.platform</depends>
+<depends>com.intellij.java</depends>
+
+<!-- Text to display as company information on Preferences/Settings | Plugin page -->
+<vendor>alexdumitriu2001</vendor>
+
+<extensions defaultExtensionNs="com.intellij">
+    <!--
+      Extend the IntelliJ Platform local inspection type and connect it to the implementation class in this plugin.
+      <localInspection> type element is applied within the scope of a file under edit.
+      It is preferred over <inspectionToolProvider>
+        @see intellij.platform.resources.LangExtensionPoints
+        @see com.intellij.codeInspection.InspectionProfileEntry
+      Attributes:
+        - language - inspection language ID
+        - shortName - not specified, will be computed by the underlying implementation classes
+        - bundle - name of the message bundle for the "key" attribute
+        - key - the key of the message to be shown in the Preferences | Editor | Inspections panel
+        - groupPath - defines the outermost grouping for this inspection in
+            the Preferences | Editor | Inspections panel. Not localized.
+        - groupBundle - the name of a message bundle file to translate groupKey
+            In this case, reuse an IntelliJ Platform bundle file from intellij.platform.resources.en
+        - groupKey - the key to use for translation subgroup name using groupBundle file.
+            In this case, reuse the IntelliJ Platform subcategory "Probable bugs"
+        - enabledByDefault - inspection state when the Inspections panel is created.
+        - level - the default level of error found by this inspection, e.g. INFO, ERROR, etc.
+            @see com.intellij.codeHighlighting.HighlightDisplayLevel
+        - implementationClass= the fully-qualified name of the inspection implementation class
+    -->
+    <localInspection language="JAVA"
+                     bundle="messages.MyBundle"
+                     key="inspection.url.hashcode.references.display.name"
+                     groupPath="Java"
+                     groupBundle="messages.InspectionsBundle"
+                     groupKey="group.names.probable.bugs"
+                     enabledByDefault="true"
+                     level="WARNING"
+                     implementationClass="com.github.alexdumitriu2001.mavenartifacts.MyUrlHashcodeWarningInspection"/>
+</extensions>
+
 </idea-plugin>
