--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,3 +1,3 @@
-name=My Plugin
-applicationService=Application service
-projectService=Project service: {0}
+inspection.url.hashcode.references.display.name=SDK: Applied '.hashCode()' to URL instance
+inspection.url.hashcode.references.problem.descriptor=SDK: URL instance hashed
+inspection.url.hashcode.references.use.quickfix=SDK: Add '.toURI()'
